antlr_files/patitoParser.py
# Generated from patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class patitoParser ( Parser ):

    grammarFileName = "patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "':'", "'('", "')'", "'{'", 
                     "'}'", "'>'", "'<'", "'>='", "'<='", "'=='", "'+'", 
                     "'-'", "'*'", "'/'", "'='", "'Programa'", "'Vars'", 
                     "'Nula'", "'Inicio'", "'Fin'", "'Escribe'", "'Mientras'", 
                     "'Haz'", "'Si'", "'Sino'", "'int'", "'float'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "PROGRAMA", "VARS", "NULA", 
                      "INICIO", "FIN", "ESCRIBE", "MIENTRAS", "HAZ", "SI", 
                      "SINO", "INT_TOK", "FLOAT_TOK", "ID", "CTE_FLOT", 
                      "CTE_ENT", "LETRERO", "WS" ]

    RULE_programa = 0
    RULE_vars = 1
    RULE_cycle = 2
    RULE_funcs = 3
    RULE_cuerpo = 4
    RULE_programaBis = 5
    RULE_estatutoBis = 6
    RULE_estatuto = 7
    RULE_tipo = 8
    RULE_expresion = 9
    RULE_bool = 10
    RULE_exp = 11
    RULE_op = 12
    RULE_termino = 13
    RULE_divmult = 14
    RULE_factor = 15
    RULE_cte = 16
    RULE_llamada = 17
    RULE_expresionBis = 18
    RULE_condicion = 19
    RULE_imprime = 20
    RULE_parametros = 21
    RULE_ciclo = 22
    RULE_asigna = 23
    RULE_typeId = 24

    ruleNames =  [ "programa", "vars", "cycle", "funcs", "cuerpo", "programaBis", 
                   "estatutoBis", "estatuto", "tipo", "expresion", "bool", 
                   "exp", "op", "termino", "divmult", "factor", "cte", "llamada", 
                   "expresionBis", "condicion", "imprime", "parametros", 
                   "ciclo", "asigna", "typeId" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    PROGRAMA=18
    VARS=19
    NULA=20
    INICIO=21
    FIN=22
    ESCRIBE=23
    MIENTRAS=24
    HAZ=25
    SI=26
    SINO=27
    INT_TOK=28
    FLOAT_TOK=29
    ID=30
    CTE_FLOT=31
    CTE_ENT=32
    LETRERO=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(patitoParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(patitoParser.ID, 0)

        def INICIO(self):
            return self.getToken(patitoParser.INICIO, 0)

        def cuerpo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.CuerpoContext)
            else:
                return self.getTypedRuleContext(patitoParser.CuerpoContext,i)


        def FIN(self):
            return self.getToken(patitoParser.FIN, 0)

        def vars_(self):
            return self.getTypedRuleContext(patitoParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.FuncsContext)
            else:
                return self.getTypedRuleContext(patitoParser.FuncsContext,i)


        def programaBis(self):
            return self.getTypedRuleContext(patitoParser.ProgramaBisContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = patitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(patitoParser.PROGRAMA)
                self.state = 51
                self.match(patitoParser.ID)
                self.state = 52
                self.match(patitoParser.T__0)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 53
                    self.vars_()


                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 56
                    self.funcs()
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 62
                self.match(patitoParser.INICIO)
                self.state = 63
                self.cuerpo()
                self.state = 64
                self.match(patitoParser.FIN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(patitoParser.PROGRAMA)
                self.state = 67
                self.match(patitoParser.ID)
                self.state = 68
                self.match(patitoParser.T__0)
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 69
                        self.funcs() 
                    self.state = 74
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 75
                self.programaBis()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.match(patitoParser.PROGRAMA)
                self.state = 77
                self.match(patitoParser.ID)
                self.state = 78
                self.match(patitoParser.T__0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 79
                    self.funcs()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 85
                self.match(patitoParser.INICIO)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 86
                    self.cuerpo()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(patitoParser.FIN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(patitoParser.PROGRAMA)
                self.state = 94
                self.match(patitoParser.ID)
                self.state = 95
                self.match(patitoParser.T__0)
                self.state = 96
                self.match(patitoParser.INICIO)
                self.state = 97
                self.cuerpo()
                self.state = 98
                self.match(patitoParser.FIN)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.match(patitoParser.PROGRAMA)
                self.state = 101
                self.match(patitoParser.ID)
                self.state = 102
                self.match(patitoParser.T__0)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==19:
                    self.state = 103
                    self.vars_()


                self.state = 106
                self.match(patitoParser.INICIO)
                self.state = 107
                self.cuerpo()
                self.state = 108
                self.match(patitoParser.FIN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(patitoParser.VARS, 0)

        def cycle(self):
            return self.getTypedRuleContext(patitoParser.CycleContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = patitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(patitoParser.VARS)
            self.state = 113
            self.cycle()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(patitoParser.ID)
            else:
                return self.getToken(patitoParser.ID, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.TipoContext)
            else:
                return self.getTypedRuleContext(patitoParser.TipoContext,i)


        def cycle(self):
            return self.getTypedRuleContext(patitoParser.CycleContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)




    def cycle(self):

        localctx = patitoParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_cycle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(patitoParser.ID)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 116
                self.match(patitoParser.T__1)
                self.state = 117
                self.match(patitoParser.ID)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(patitoParser.T__2)
            self.state = 124
            self.tipo()
            self.state = 125
            self.match(patitoParser.T__0)

            self.state = 126
            self.match(patitoParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 127
                self.match(patitoParser.T__1)
                self.state = 128
                self.match(patitoParser.ID)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(patitoParser.T__2)
            self.state = 135
            self.tipo()
            self.state = 136
            self.match(patitoParser.T__0)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 138
                self.cycle()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULA(self):
            return self.getToken(patitoParser.NULA, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(patitoParser.ID)
            else:
                return self.getToken(patitoParser.ID, i)

        def tipo(self):
            return self.getTypedRuleContext(patitoParser.TipoContext,0)


        def vars_(self):
            return self.getTypedRuleContext(patitoParser.VarsContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(patitoParser.CuerpoContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = patitoParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcs)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(patitoParser.NULA)
                self.state = 142
                self.match(patitoParser.ID)
                self.state = 143
                self.match(patitoParser.T__3)
                self.state = 144
                self.match(patitoParser.ID)
                self.state = 145
                self.match(patitoParser.T__2)
                self.state = 146
                self.tipo()
                self.state = 147
                self.match(patitoParser.T__4)
                self.state = 148
                self.match(patitoParser.T__5)
                self.state = 149
                self.vars_()
                self.state = 150
                self.cuerpo()
                self.state = 151
                self.match(patitoParser.T__6)
                self.state = 152
                self.match(patitoParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(patitoParser.NULA)
                self.state = 155
                self.match(patitoParser.ID)
                self.state = 156
                self.match(patitoParser.T__3)
                self.state = 157
                self.match(patitoParser.ID)
                self.state = 158
                self.match(patitoParser.T__2)
                self.state = 159
                self.tipo()
                self.state = 160
                self.match(patitoParser.T__4)
                self.state = 161
                self.match(patitoParser.T__5)
                self.state = 162
                self.cuerpo()
                self.state = 163
                self.match(patitoParser.T__6)
                self.state = 164
                self.match(patitoParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(patitoParser.EstatutoContext,0)


        def estatutoBis(self):
            return self.getTypedRuleContext(patitoParser.EstatutoBisContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)




    def cuerpo(self):

        localctx = patitoParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cuerpo)
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(patitoParser.T__5)
                self.state = 169
                self.estatuto()
                self.state = 170
                self.match(patitoParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(patitoParser.T__5)
                self.state = 173
                self.estatutoBis()
                self.state = 174
                self.match(patitoParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaBisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self):
            return self.getTypedRuleContext(patitoParser.FuncsContext,0)


        def programaBis(self):
            return self.getTypedRuleContext(patitoParser.ProgramaBisContext,0)


        def INICIO(self):
            return self.getToken(patitoParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(patitoParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(patitoParser.FIN, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_programaBis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramaBis" ):
                listener.enterProgramaBis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramaBis" ):
                listener.exitProgramaBis(self)




    def programaBis(self):

        localctx = patitoParser.ProgramaBisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_programaBis)
        try:
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.funcs()
                self.state = 179
                self.programaBis()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(patitoParser.INICIO)
                self.state = 182
                self.cuerpo()
                self.state = 183
                self.match(patitoParser.FIN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoBisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(patitoParser.EstatutoContext,0)


        def estatutoBis(self):
            return self.getTypedRuleContext(patitoParser.EstatutoBisContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_estatutoBis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatutoBis" ):
                listener.enterEstatutoBis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatutoBis" ):
                listener.exitEstatutoBis(self)




    def estatutoBis(self):

        localctx = patitoParser.EstatutoBisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_estatutoBis)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.estatuto()
                self.state = 188
                self.estatutoBis()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.estatuto()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(patitoParser.AsignaContext,0)


        def llamada(self):
            return self.getTypedRuleContext(patitoParser.LlamadaContext,0)


        def condicion(self):
            return self.getTypedRuleContext(patitoParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(patitoParser.CicloContext,0)


        def imprime(self):
            return self.getTypedRuleContext(patitoParser.ImprimeContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = patitoParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_estatuto)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.asigna()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 194
                self.llamada()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 195
                self.condicion()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 196
                self.ciclo()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 197
                self.imprime()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TOK(self):
            return self.getToken(patitoParser.INT_TOK, 0)

        def FLOAT_TOK(self):
            return self.getToken(patitoParser.FLOAT_TOK, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = patitoParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            _la = self._input.LA(1)
            if not(_la==28 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(patitoParser.ExpContext,0)


        def bool_(self):
            return self.getTypedRuleContext(patitoParser.BoolContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = patitoParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expresion)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 4, 5, 13, 14, 30, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.exp()
                pass
            elif token in [8, 9, 10, 11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.bool_()
                self.state = 204
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(patitoParser.ExpContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)




    def bool_(self):

        localctx = patitoParser.BoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bool)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.match(patitoParser.T__7)
                self.state = 209
                self.exp()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 210
                self.match(patitoParser.T__8)
                self.state = 211
                self.exp()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 212
                self.match(patitoParser.T__9)
                self.state = 213
                self.exp()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 214
                self.match(patitoParser.T__10)
                self.state = 215
                self.exp()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 216
                self.match(patitoParser.T__11)
                self.state = 217
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.TerminoContext)
            else:
                return self.getTypedRuleContext(patitoParser.TerminoContext,i)


        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.OpContext)
            else:
                return self.getTypedRuleContext(patitoParser.OpContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = patitoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exp)
        try:
            self.state = 229
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.termino()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 226
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 221
                        self.termino()
                        self.state = 222
                        self.op() 
                    self.state = 228
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patitoParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)




    def op(self):

        localctx = patitoParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_op)
        try:
            self.state = 234
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 231
                self.match(patitoParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 232
                self.match(patitoParser.T__13)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
